<resources>
    <string name="app_name">QuizApp</string>
    <!--Questions-->
    <string name="question1">"Acura is the luxury brand of what car manufacturer?"</string>
    <string name="question2">What is the motorsports and performance division of Nissan?</string>
    <string name="question3">Volkswagen owns</string>
    <string name="question4">Infiniti is the luxury brand of</string>
    <string name="question5">What is the fastest production car?</string>


    <!--Answers for question1-->
    <string name="q1Incorrect1">"Infiniti"</string>
    <string name="q1Incorrect2">"Subaru"</string>
    <string name="q1Incorrect3">"Mitsibishi"</string>
    <string name="q1correct">"Honda"</string>

    <!--Answer for question2-->
    <string name="q2correct">"Nismo"</string>

    <!--Answer for question3-->
    <string name="q3correct1">"Audi"</string>
    <string name="q3correct2">"Bentley"</string>
    <string name="q3correct3">"Bugatti"</string>
    <string name="q3Incorrect">"Lexus"</string>

    <!--Answer for question4-->
    <string name="q4correct1">"Nissan"</string>
    <string name="q4Incorrect1">"Subaru"</string>
    <string name="q4Incorrect2">"Mitsibishi"</string>
    <string name="q4Incorrect3">"Lexus"</string>

    <!--Answer for question5-->
    <string name="q5Incorrect1">"Ferrari 458"</string>
    <string name="q5Incorrect2">"Lamborghini Aventador"</string>
    <string name="q5correct">"Bugatti Veyron"</string>
    <string name="q5Incorrect3">"Lexus Lfa"</string>







</resources>
