<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.quizapp.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="com.example.android.quizapp.MainActivity">

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/linearLayout5"
            android:layout_toLeftOf="@+id/Question4"
            android:layout_toStartOf="@+id/Question4"
            android:onClick="getScore"
            android:text="Submit" />


        <TextView
            android:id="@+id/Question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/writtenAns"
            android:layout_alignEnd="@+id/Question1"
            android:layout_alignLeft="@+id/linearLayout4"
            android:layout_alignRight="@+id/Question1"
            android:layout_alignStart="@+id/linearLayout4"
            android:layout_centerHorizontal="true"
            android:text="@string/question3"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/writtenAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerHorizontal="true"
            android:hint="Answer" />

        <TextView
            android:id="@+id/Question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/linearLayout2"
            android:layout_alignTop="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:paddingBottom="20dp"
            android:text="@string/question1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"


            >


            <RadioGroup
                android:id="@+id/radioGroupQ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/radioButtonQ1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout"
                    android:text="@string/q1Incorrect1" />

                <RadioButton
                    android:id="@+id/radioButton2Q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioButton"
                    android:text="@string/q1Incorrect2" />

                <RadioButton
                    android:id="@+id/radioButton3Q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioButton2"
                    android:text="@string/q1Incorrect3" />

                <RadioButton
                    android:id="@+id/radioButton4Q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/radioButton3"
                    android:layout_alignStart="@+id/radioButton3"
                    android:layout_below="@+id/radioButton3"
                    android:text="@string/q1correct" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/Question2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_above="@+id/linearLayout3"
            android:layout_centerHorizontal="true"
            android:text="@string/question2"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/linearLayout2"
            android:layout_alignRight="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout2"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2correct1" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2correct2" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2correct3" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2Incorrect" />
        </LinearLayout>

        <TextView
            android:id="@+id/Question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/writtenAns"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/question4"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/linearLayout3"
            android:layout_alignRight="@+id/linearLayout3"
            android:layout_below="@+id/Question4">


            <RadioGroup
                android:id="@+id/radioGroupQ4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/radioButtonQ4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout"
                    android:text="@string/q4correct1" />

                <RadioButton
                    android:id="@+id/radioButton2Q4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioButton"
                    android:text="@string/q4Incorrect1" />

                <RadioButton
                    android:id="@+id/radioButton3Q4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioButton2"
                    android:text="@string/q4Incorrect2" />

                <RadioButton
                    android:id="@+id/radioButton4Q4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/radioButton3"
                    android:layout_alignStart="@+id/radioButton3"
                    android:layout_below="@+id/radioButton3"
                    android:text="@string/q4Incorrect3" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/Question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout4"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/question5"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Question5"
            android:layout_marginLeft="30dp"
            android:layout_toLeftOf="@+id/writtenAns"
            android:layout_toStartOf="@+id/writtenAns"
            android:orientation="vertical">


            <RadioGroup
                android:id="@+id/radioGroupQ5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/linearLayout4"
                android:layout_alignRight="@+id/linearLayout4"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/radioButtonQ5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout"
                    android:text="@string/q5Incorrect1" />

                <RadioButton
                    android:id="@+id/radioButton2Q5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioButton"
                    android:text="@string/q5Incorrect2" />

                <RadioButton
                    android:id="@+id/radioButton3Q5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioButton2"
                    android:text="@string/q5correct" />

                <RadioButton
                    android:id="@+id/radioButton4Q5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/radioButton3"
                    android:layout_alignStart="@+id/radioButton3"
                    android:layout_below="@+id/radioButton3"
                    android:text="@string/q5Incorrect3" />
            </RadioGroup>
        </LinearLayout>


    </RelativeLayout>
</ScrollView>